fixed code review comments